--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,6 +2,7 @@
     <app-banner></app-banner>
     <app-about></app-about>
     <app-jobs></app-jobs>
+    <app-education></app-education>
     <app-proyects></app-proyects>
     <app-more-proyects></app-more-proyects>
     <app-contact></app-contact>
