--- a/src/app/components/home/education/education.component.html
+++ b/src/app/components/home/education/education.component.html
@@ -7,7 +7,7 @@
                 </h3>
             </div>
             <div class="jobs-tabs" data-aos="fade-up" data-aos-duration="1000">
-              <ul ngbNav #nav="ngbNav" [(activeId)]="active" orientation="vertical" class="nav-tabs jobs-tabs">
+              <ul ngbNav #nav="ngbNav" [(activeId)]="active" orientation="vertical" class="nav-tabs jobs-tabs"  style="margin-right: 69px">
                     <li *ngFor='let education of "Experience.Education" | translate; let i = index' [title]="education.Tab" [ngbNavItem]="i">
                       <a ngbNavLink>{{education.Tab}}</a>
                         <ng-template ngbNavContent>
