--- a/src/app/components/general/footer/footer.component.html
+++ b/src/app/components/general/footer/footer.component.html
@@ -2,23 +2,23 @@
     <div [@animateFooter]>
         <ul class="footer-left-bar d-none d-md-block">
             <li>
-                <a (click)='analyticsService.sendAnalyticEvent("click_github", "footer", "github")' href="https://github.com/Harpreet-N" target='_blank'>
+                <a  href="https://github.com/Harpreet-N" target='_blank'>
                     <i class="fab fa-github"></i>
                 </a>
             </li>
             <li>
-                <a (click)='analyticsService.sendAnalyticEvent("click_linkedin", "footer", "github")' href="https://www.linkedin.com/in/harpreet-nehar-05575118a/" target='_blank'>
+                <a  href="https://www.linkedin.com/in/harpreet-nehar-05575118a/" target='_blank'>
                     <i class="fab fa-linkedin-in"></i>
                 </a>
             </li>
         </ul>
         <div class="footer-right-bar d-none d-md-block">
-            <a (click)='analyticsService.sendAnalyticEvent("click_send_mail", "footer", "email")' href="mailto:harpreetneharyt@gmail.com" target='_blank'>harpreetneharyt@gmail.com </a>
+            <a  href="mailto:harpreetneharyt@gmail.com" target='_blank'>harpreetneharyt@gmail.com </a>
         </div>
     </div>
 
     <div class="footer-credits text-center" >
-        <a (click)='analyticsService.sendAnalyticEvent("click_github_portfolio_andresjose", "footer", "click")' href="https://github.com/Harpreet-N" target="_blank" rel="nofollow noopener noreferrer">
+        <a  href="https://github.com/Harpreet-N" target="_blank" rel="nofollow noopener noreferrer">
             <div>Built with Angular</div>
         </a>
     </div>
