--- a/src/app/components/general/header/header.component.html
+++ b/src/app/components/general/header/header.component.html
@@ -5,27 +5,27 @@
             <img src='assets/images/me/icon-512.png' width='45'/>
         </a>
         <ul ngbNav #nav="ngbNav" class="menu-ul">
-            <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_about", "menu", "click")'>
+            <li ngbNavItem>
                 <a ngbNavLink (click)='scroll("about")'><span class='nav-number'>01. </span> <span
                         class="underline nav-text"> {{"Header.Item1" | translate}}</span></a>
                 <ng-template ngbNavContent>First content</ng-template>
             </li>
-            <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_experience", "menu", "click")'>
+            <li ngbNavItem>
                 <a ngbNavLink (click)='scroll("jobs")'><span class='nav-number'>02. </span> <span
                         class="underline nav-text"> {{"Header.Item2" | translate}}</span></a>
                 <ng-template ngbNavContent>Second content</ng-template>
             </li>
-            <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_jobs", "menu", "click")'>
+            <li ngbNavItem>
                 <a ngbNavLink (click)='scroll("education")'><span class='nav-number'>03. </span> <span
                         class="underline nav-text"> {{"Header.Item3" | translate}}</span></a>
                 <ng-template ngbNavContent>Second content</ng-template>
             </li>
-            <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
+            <li ngbNavItem>
                 <a ngbNavLink (click)='scroll("proyects")'><span class='nav-number'>04. </span> <span
                         class="underline nav-text"> {{"Header.Item4" | translate}}</span></a>
                 <ng-template ngbNavContent>Second content</ng-template>
             </li>
-            <li ngbNavItem (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
+            <li ngbNavItem>
                 <a ngbNavLink (click)='scroll("contact")'><span class='nav-number'>05. </span> <span
                         class="underline nav-text"> {{"Header.Item5" | translate}}</span></a>
                 <ng-template ngbNavContent>Second content</ng-template>
@@ -44,12 +44,12 @@
             <aside [class.aside-show]='responsiveMenuVisible' [class.nav-shadow]='this.pageYPosition>0' class="on-top">
                 <nav>
                     <ol>
-                        <li (click)='analyticsService.sendAnalyticEvent("click_about", "menu", "click")'>
+                        <li>
                             <a (click)='scroll("about")'>
                                 <span>01. </span> {{"Header.Item1" | translate}}
                             </a>
                         </li>
-                        <li (click)='analyticsService.sendAnalyticEvent("click_experience", "menu", "click")'>
+                        <li>
                             <a (click)='scroll("jobs")'>
                                 <span>02. </span> {{"Header.Item2" | translate}}
                             </a>
@@ -59,12 +59,12 @@
                                 <span>02. </span> {{"Header.Item2" | translate}}
                             </a>
                         </li>
-                        <li (click)='analyticsService.sendAnalyticEvent("click_jobs", "menu", "click")'>
+                        <li>
                             <a (click)='scroll("proyects")'>
                                 <span>03. </span> {{"Header.Item3" | translate}}
                             </a>
                         </li>
-                        <li (click)='analyticsService.sendAnalyticEvent("click_contact", "menu", "click")'>
+                        <li>
                             <a (click)='scroll("proyects")'>
                                 <span>04. </span> {{"Header.Item4" | translate}}
                             </a>
