--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,14 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
-$Navy         : #242582;
-$LightNavy    : #2F2FA2;
-$LightestNavy : #553D67;
+$Navy         : #0a192f;
+$LightNavy    : #112240;
+$LightestNavy : #303C55;
 $Slate        : #8892b0;
 $LightSlate   : #a8b2d1;
 $LightestSlate: #ccd6f6;
 $White        : #e6f1ff;
-$Green        : #F64C72;
-$GreenOpacity : #99738E;
+$Green        : #64ffda;
+$GreenOpacity : rgba(100,255,218,0.07);
 
 
 $MainFont: DMSan-Medium,San Frsancisco,SF Pro Text,-apple-system,system-ui,BlinkMacSystemFont,Roboto,Helvetica Neue,Segoe UI,Arial,sans-serif;
