--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,6 +4,7 @@
     <app-jobs></app-jobs>
     <app-education></app-education>
     <app-proyects></app-proyects>
+    <app-logo></app-logo>
     <app-more-proyects></app-more-proyects>
     <app-contact></app-contact>
 </main>
