--- a/src/app/components/home/jobs/jobs.component.scss
+++ b/src/app/components/home/jobs/jobs.component.scss
@@ -61,6 +61,7 @@
     }
 
     li{
+        display: inline-block;
         border-left: 2px solid $LightestNavy;
         border-left-width: 2px;
         border-left-style: solid;
