--- a/src/variables.scss
+++ b/src/variables.scss
@@ -1,18 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
 
-$Navy         : #0a192f;
-$LightNavy    : #112240;
-$LightestNavy : #303C55;
-$Slate        : #8892b0;
-$LightSlate   : #a8b2d1;
+$Navy         : #071E3D;
+$LightNavy    : #1F4287;
+$LightestNavy : #BFEAF5;
+$Slate        : #c2c3c9;
+$LightSlate   : #dedee7;
 $LightestSlate: #ccd6f6;
 $White        : #e6f1ff;
-$Green        : #64ffda;
-$GreenOpacity : rgba(100,255,218,0.07);
+$Green        : #278EA5;
+$GreenOpacity : #21E6C1;
 
 
 $MainFont: DMSan-Medium,San Frsancisco,SF Pro Text,-apple-system,system-ui,BlinkMacSystemFont,Roboto,Helvetica Neue,Segoe UI,Arial,sans-serif;
 $CodeFont: JetBrainsMono-Bold, JetBrainsMono-Bold, Fira Mono, Roboto Mono, Lucida Console, Monaco, Monospace;
+
+/**
+
+$Navy         : #0B2447;
+$LightNavy    : #19376D;
+$LightestNavy : #BFEAF5;
+$Slate        : #c2c3c9;
+$LightSlate   : #dedee7;
+$LightestSlate: #ccd6f6;
+$White        : #e6f1ff;
+$Green        : #576CBC;
+$GreenOpacity : #A5D7E8;
+ */
+
 
 
 /*
